--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   },
   "homepage": "https://github.com/indigotech/onboard-guilherme-brito#readme",
   "dependencies": {
-    "express": "^4.19.2",
-    "graphql": "^16.9.0",
-    "graphql-http": "^1.22.1"
+    "express": "4.19.2",
+    "graphql": "16.9.0",
+    "graphql-http": "1.22.1"
   }
 }
