--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/indigotech/onboard-guilherme-brito#readme",
   "dependencies": {
     "@apollo/server": "4.11.0",
+    "@prisma/client": "5.19.1",
     "graphql": "16.9.0"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "globals": "15.9.0",
     "nodemon": "3.1.4",
     "prettier": "3.3.3",
+    "prisma": "5.19.1",
     "typescript": "5.5.4",
     "typescript-eslint": "8.4.0"
   }
