--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   "dependencies": {
     "@apollo/server": "4.11.0",
     "@prisma/client": "5.19.1",
+    "bcrypt": "5.1.1",
     "graphql": "16.9.0"
   },
   "devDependencies": {
     "@eslint/js": "9.9.1",
+    "@types/bcrypt": "5.0.2",
     "@types/node": "22.5.2",
     "@typescript-eslint/eslint-plugin": "8.4.0",
     "@typescript-eslint/parser": "8.4.0",
