--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
   "devDependencies": {
     "@eslint/js": "9.9.1",
     "@types/bcrypt": "5.0.2",
-    "@types/mocha": "^10.0.7",
+    "@types/mocha": "10.0.7",
     "@types/node": "22.5.2",
     "@typescript-eslint/eslint-plugin": "8.4.0",
     "@typescript-eslint/parser": "8.4.0",
+    "axios": "1.7.7",
     "eslint": "9.9.1",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.2.1",
